# Smoke-Segmentation

./: CMakeLists.txt  README.md  main.cpp
Blocker/: CMakeLists.txt  QuadTree.cpp  test.cpp
Blocker/include/: QuadTree.h
GaussToolKit/: CMakeLists.txt  GaussCompute.cpp
GaussToolKit/include/: GaussCompute.h
